tests/typechecker/should_fail/type_annotations_13.csp
f :: (a) -> a
f(x) =
    let 
        g :: Set a => (a) -> a
        g(x) = x
    within g(x)
